CUATRI1/LENGUAJES/LAB/PEL1/EXAM/PRUEBAS/ADAPTACION_ZIF/gFiboParser.java
// Generated from gFiboParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gFiboParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INFORMATION_START=1, COMMENT_BLOCK_START=2, COMMENT_LINE_START=3, INCLUDE_START=4, 
		ASSIGN=5, END=6, RETURN_TYPE=7, RETURN=8, DECLARATION=9, SWITCH=10, DEFAULT=11, 
		END_SWITCH=12, CASE=13, BREAK=14, BODY_START=15, BODY_END=16, IF_START=17, 
		ELSE=18, IF_END=19, INTEGER=20, STRING=21, VOID=22, WHILE=23, IF=24, COS=25, 
		SEN=26, TAN=27, POW=28, SQRT=29, MUL=30, DIV=31, ADD=32, SUB=33, OR=34, 
		AND=35, OR_B=36, AND_B=37, MIN=38, MAX=39, MINEQ=40, MAXEQ=41, EQ=42, 
		NEQ=43, ARGUMENT_START=44, ARGUMENT_END=45, SEPARATOR=46, INT=47, FLOAT=48, 
		VAR=49, WS=50, STR_START=51, COMMENT_BLOCK_END=52, TXT_MULTILINE=53, INFORMATION_END=54, 
		TAG_START=55, TXT_INFORMATION=56, COMMENT_LINE_END=57, TXT_LINE=58, TAG_END=59, 
		TAG_ID=60, TAG_LIMIT=61, TXT_TAG=62, STR_END=63, ESC=64, STR_VAR=65, STR_TXT=66;
	public static final int
		RULE_init = 0, RULE_information = 1, RULE_tag_name = 2, RULE_tag_content = 3, 
		RULE_tag_start = 4, RULE_tag_end = 5, RULE_comment = 6, RULE_comment_block_start = 7, 
		RULE_comment_block_end = 8, RULE_information_start = 9, RULE_information_end = 10, 
		RULE_comment_line_start = 11, RULE_txt = 12, RULE_prog = 13, RULE_mem = 14, 
		RULE_end_exp = 15, RULE_exp = 16, RULE_mathL1 = 17, RULE_mathL2 = 18, 
		RULE_mathL3 = 19, RULE_logicL1 = 20, RULE_logicL2 = 21, RULE_logicL3 = 22, 
		RULE_trig = 23, RULE_include = 24, RULE_include_start = 25, RULE_library = 26, 
		RULE_assigment = 27, RULE_declaration = 28, RULE_assigment_declaration = 29, 
		RULE_var_type = 30, RULE_var_name = 31, RULE_lieteral = 32, RULE_number = 33, 
		RULE_str = 34, RULE_str_start = 35, RULE_str_end = 36, RULE_str_txt = 37, 
		RULE_esc = 38, RULE_str_var = 39, RULE_function_call = 40, RULE_function_name = 41, 
		RULE_system_function = 42, RULE_system_header = 43, RULE_while_header = 44, 
		RULE_if_header = 45, RULE_switch_header = 46, RULE_system_body = 47, RULE_while_body = 48, 
		RULE_if_body = 49, RULE_switch_body = 50, RULE_case_closure = 51, RULE_system_function_name = 52, 
		RULE_while_ = 53, RULE_if_ = 54, RULE_custom_function = 55, RULE_custom_header = 56, 
		RULE_custom_body = 57, RULE_custom_function_name = 58, RULE_parameter = 59, 
		RULE_dev = 60, RULE_separator = 61, RULE_return_type = 62, RULE_return_word = 63, 
		RULE_function_declaration = 64, RULE_argument_start = 65, RULE_argument_end = 66, 
		RULE_body_start = 67, RULE_if_start = 68, RULE_switch_ = 69, RULE_case_ = 70, 
		RULE_break_ = 71, RULE_deafault_ = 72, RULE_switch_end = 73, RULE_else_ = 74, 
		RULE_if_end = 75, RULE_body_end = 76, RULE_assign = 77, RULE_trash = 78;
	public static final String[] ruleNames = {
		"init", "information", "tag_name", "tag_content", "tag_start", "tag_end", 
		"comment", "comment_block_start", "comment_block_end", "information_start", 
		"information_end", "comment_line_start", "txt", "prog", "mem", "end_exp", 
		"exp", "mathL1", "mathL2", "mathL3", "logicL1", "logicL2", "logicL3", 
		"trig", "include", "include_start", "library", "assigment", "declaration", 
		"assigment_declaration", "var_type", "var_name", "lieteral", "number", 
		"str", "str_start", "str_end", "str_txt", "esc", "str_var", "function_call", 
		"function_name", "system_function", "system_header", "while_header", "if_header", 
		"switch_header", "system_body", "while_body", "if_body", "switch_body", 
		"case_closure", "system_function_name", "while_", "if_", "custom_function", 
		"custom_header", "custom_body", "custom_function_name", "parameter", "dev", 
		"separator", "return_type", "return_word", "function_declaration", "argument_start", 
		"argument_end", "body_start", "if_start", "switch_", "case_", "break_", 
		"deafault_", "switch_end", "else_", "if_end", "body_end", "assign", "trash"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'/***'", null, "'//'", "'include'", "':='", "';'", null, "'devolver'", 
		"'function'", "'switch'", "'default'", "'endswitch'", "'case '", "'break'", 
		"'begin'", "'end'", "'then'", "'else'", "'endif'", "'numero'", "'cadena'", 
		"'void'", "'while'", "'if'", "'cos'", "'sen'", "'tan'", "'^'", null, "'*'", 
		"'/'", "'+'", "'-'", "'||'", "'&&'", "'|'", "'&'", "'<'", "'>'", "'<='", 
		"'>='", "'=='", "'!='", "'('", "')'", "','", null, null, null, null, null, 
		null, null, "'***/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INFORMATION_START", "COMMENT_BLOCK_START", "COMMENT_LINE_START", 
		"INCLUDE_START", "ASSIGN", "END", "RETURN_TYPE", "RETURN", "DECLARATION", 
		"SWITCH", "DEFAULT", "END_SWITCH", "CASE", "BREAK", "BODY_START", "BODY_END", 
		"IF_START", "ELSE", "IF_END", "INTEGER", "STRING", "VOID", "WHILE", "IF", 
		"COS", "SEN", "TAN", "POW", "SQRT", "MUL", "DIV", "ADD", "SUB", "OR", 
		"AND", "OR_B", "AND_B", "MIN", "MAX", "MINEQ", "MAXEQ", "EQ", "NEQ", "ARGUMENT_START", 
		"ARGUMENT_END", "SEPARATOR", "INT", "FLOAT", "VAR", "WS", "STR_START", 
		"COMMENT_BLOCK_END", "TXT_MULTILINE", "INFORMATION_END", "TAG_START", 
		"TXT_INFORMATION", "COMMENT_LINE_END", "TXT_LINE", "TAG_END", "TAG_ID", 
		"TAG_LIMIT", "TXT_TAG", "STR_END", "ESC", "STR_VAR", "STR_TXT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gFiboParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gFiboParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public List<ProgContext> prog() {
			return getRuleContexts(ProgContext.class);
		}
		public ProgContext prog(int i) {
			return getRuleContext(ProgContext.class,i);
		}
		public List<MemContext> mem() {
			return getRuleContexts(MemContext.class);
		}
		public MemContext mem(int i) {
			return getRuleContext(MemContext.class,i);
		}
		public List<TrashContext> trash() {
			return getRuleContexts(TrashContext.class);
		}
		public TrashContext trash(int i) {
			return getRuleContext(TrashContext.class,i);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).exitInit(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INFORMATION_START) | (1L << COMMENT_BLOCK_START) | (1L << COMMENT_LINE_START) | (1L << INCLUDE_START) | (1L << DECLARATION) | (1L << SWITCH) | (1L << INTEGER) | (1L << STRING) | (1L << VOID) | (1L << WHILE) | (1L << IF) | (1L << VAR) | (1L << WS))) != 0)) {
				{
				setState(161);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(158);
					prog(0);
					}
					break;
				case 2:
					{
					setState(159);
					mem(0);
					}
					break;
				case 3:
					{
					setState(160);
					trash();
					}
					break;
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InformationContext extends ParserRuleContext {
		public Tag_startContext tag_start() {
			return getRuleContext(Tag_startContext.class,0);
		}
		public Tag_nameContext tag_name() {
			return getRuleContext(Tag_nameContext.class,0);
		}
		public Tag_endContext tag_end() {
			return getRuleContext(Tag_endContext.class,0);
		}
		public TerminalNode TAG_END() { return getToken(gFiboParser.TAG_END, 0); }
		public List<Tag_contentContext> tag_content() {
			return getRuleContexts(Tag_contentContext.class);
		}
		public Tag_contentContext tag_content(int i) {
			return getRuleContext(Tag_contentContext.class,i);
		}
		public InformationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_information; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).enterInformation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).exitInformation(this);
		}
	}

	public final InformationContext information() throws RecognitionException {
		InformationContext _localctx = new InformationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_information);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			tag_start();
			setState(167);
			tag_name();
			setState(168);
			tag_end();
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TXT_MULTILINE) | (1L << TXT_INFORMATION) | (1L << TXT_LINE) | (1L << TAG_ID) | (1L << TXT_TAG))) != 0)) {
				{
				{
				setState(169);
				tag_content();
				}
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(175);
			match(TAG_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tag_nameContext extends ParserRuleContext {
		public TerminalNode TAG_ID() { return getToken(gFiboParser.TAG_ID, 0); }
		public Tag_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tag_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).enterTag_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).exitTag_name(this);
		}
	}

	public final Tag_nameContext tag_name() throws RecognitionException {
		Tag_nameContext _localctx = new Tag_nameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tag_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			match(TAG_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tag_contentContext extends ParserRuleContext {
		public TxtContext txt() {
			return getRuleContext(TxtContext.class,0);
		}
		public TerminalNode TAG_ID() { return getToken(gFiboParser.TAG_ID, 0); }
		public Tag_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tag_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).enterTag_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).exitTag_content(this);
		}
	}

	public final Tag_contentContext tag_content() throws RecognitionException {
		Tag_contentContext _localctx = new Tag_contentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tag_content);
		try {
			setState(181);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TXT_MULTILINE:
			case TXT_INFORMATION:
			case TXT_LINE:
			case TXT_TAG:
				enterOuterAlt(_localctx, 1);
				{
				setState(179);
				txt();
				}
				break;
			case TAG_ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(180);
				match(TAG_ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tag_startContext extends ParserRuleContext {
		public TerminalNode TAG_START() { return getToken(gFiboParser.TAG_START, 0); }
		public Tag_startContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tag_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).enterTag_start(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).exitTag_start(this);
		}
	}

	public final Tag_startContext tag_start() throws RecognitionException {
		Tag_startContext _localctx = new Tag_startContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tag_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(TAG_START);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tag_endContext extends ParserRuleContext {
		public TerminalNode TAG_LIMIT() { return getToken(gFiboParser.TAG_LIMIT, 0); }
		public Tag_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tag_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).enterTag_end(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).exitTag_end(this);
		}
	}

	public final Tag_endContext tag_end() throws RecognitionException {
		Tag_endContext _localctx = new Tag_endContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tag_end);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(TAG_LIMIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public Comment_block_startContext comment_block_start() {
			return getRuleContext(Comment_block_startContext.class,0);
		}
		public Comment_block_endContext comment_block_end() {
			return getRuleContext(Comment_block_endContext.class,0);
		}
		public List<TxtContext> txt() {
			return getRuleContexts(TxtContext.class);
		}
		public TxtContext txt(int i) {
			return getRuleContext(TxtContext.class,i);
		}
		public Comment_line_startContext comment_line_start() {
			return getRuleContext(Comment_line_startContext.class,0);
		}
		public TerminalNode COMMENT_LINE_END() { return getToken(gFiboParser.COMMENT_LINE_END, 0); }
		public Information_startContext information_start() {
			return getRuleContext(Information_startContext.class,0);
		}
		public Information_endContext information_end() {
			return getRuleContext(Information_endContext.class,0);
		}
		public List<InformationContext> information() {
			return getRuleContexts(InformationContext.class);
		}
		public InformationContext information(int i) {
			return getRuleContext(InformationContext.class,i);
		}
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).exitComment(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comment);
		int _la;
		try {
			setState(215);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMENT_BLOCK_START:
				enterOuterAlt(_localctx, 1);
				{
				setState(187);
				comment_block_start();
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TXT_MULTILINE) | (1L << TXT_INFORMATION) | (1L << TXT_LINE) | (1L << TXT_TAG))) != 0)) {
					{
					{
					setState(188);
					txt();
					}
					}
					setState(193);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(194);
				comment_block_end();
				}
				break;
			case COMMENT_LINE_START:
				enterOuterAlt(_localctx, 2);
				{
				setState(196);
				comment_line_start();
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TXT_MULTILINE) | (1L << TXT_INFORMATION) | (1L << TXT_LINE) | (1L << TXT_TAG))) != 0)) {
					{
					{
					setState(197);
					txt();
					}
					}
					setState(202);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(203);
				match(COMMENT_LINE_END);
				}
				break;
			case INFORMATION_START:
				enterOuterAlt(_localctx, 3);
				{
				setState(205);
				information_start();
				setState(210);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TXT_MULTILINE) | (1L << TAG_START) | (1L << TXT_INFORMATION) | (1L << TXT_LINE) | (1L << TXT_TAG))) != 0)) {
					{
					setState(208);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case TAG_START:
						{
						setState(206);
						information();
						}
						break;
					case TXT_MULTILINE:
					case TXT_INFORMATION:
					case TXT_LINE:
					case TXT_TAG:
						{
						setState(207);
						txt();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(212);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(213);
				information_end();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comment_block_startContext extends ParserRuleContext {
		public TerminalNode COMMENT_BLOCK_START() { return getToken(gFiboParser.COMMENT_BLOCK_START, 0); }
		public Comment_block_startContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment_block_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).enterComment_block_start(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).exitComment_block_start(this);
		}
	}

	public final Comment_block_startContext comment_block_start() throws RecognitionException {
		Comment_block_startContext _localctx = new Comment_block_startContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comment_block_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(217);
			match(COMMENT_BLOCK_START);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comment_block_endContext extends ParserRuleContext {
		public TerminalNode COMMENT_BLOCK_END() { return getToken(gFiboParser.COMMENT_BLOCK_END, 0); }
		public Comment_block_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment_block_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).enterComment_block_end(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).exitComment_block_end(this);
		}
	}

	public final Comment_block_endContext comment_block_end() throws RecognitionException {
		Comment_block_endContext _localctx = new Comment_block_endContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_comment_block_end);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(219);
			match(COMMENT_BLOCK_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Information_startContext extends ParserRuleContext {
		public TerminalNode INFORMATION_START() { return getToken(gFiboParser.INFORMATION_START, 0); }
		public Information_startContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_information_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).enterInformation_start(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).exitInformation_start(this);
		}
	}

	public final Information_startContext information_start() throws RecognitionException {
		Information_startContext _localctx = new Information_startContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_information_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(221);
			match(INFORMATION_START);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Information_endContext extends ParserRuleContext {
		public TerminalNode INFORMATION_END() { return getToken(gFiboParser.INFORMATION_END, 0); }
		public Information_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_information_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).enterInformation_end(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).exitInformation_end(this);
		}
	}

	public final Information_endContext information_end() throws RecognitionException {
		Information_endContext _localctx = new Information_endContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_information_end);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(223);
			match(INFORMATION_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comment_line_startContext extends ParserRuleContext {
		public TerminalNode COMMENT_LINE_START() { return getToken(gFiboParser.COMMENT_LINE_START, 0); }
		public Comment_line_startContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment_line_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).enterComment_line_start(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gFiboParserListener ) ((gFiboParserListener)listener).exitComment_line_start(this);
		}
	}

	public final Comment_line_startContext comment_line_start() throws RecognitionException {
		Comment_line_startContext _localctx = new Comment_line_startContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_comment_line_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(225);
			match(COMMENT_LINE_START);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
